k8/gin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ginextlb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8010
  selector:
    app: web-service-gin
