k8/web-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service-cip
  namespace: web-service-gin
spec:
  type: ClusterIP
  ports:
   - targetPort: 8010
     port: 80
  selector:
     app: web-service-gin
