k8/web-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service-nodeport
  namespace: web-service-gin
spec:
  type: NodePort
  ports:
   - targetPort: 8010
     port: 80
     nodePort: 30008
  selector:
     app: web-service-gin
