k8/gloo-vs-default.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - exact: /all-pets
      options:
        prefixRewrite: /api/pets
      routeAction:
        single:
          upstream:
            name: default-petstore-8080
            namespace: gloo-system
    - matchers:
      - exact: /all-albums
      options:
        prefixRewrite: /albums
      routeAction:
        single:
          upstream:
            name: web-service-gin-web-service-cip-80
            namespace: gloo-system
